setup fixed height to avoid layout shift on desktop

--- a/blocks/unipol-header-no-fetch/unipol-header-no-fetch.css
+++ b/blocks/unipol-header-no-fetch/unipol-header-no-fetch.css
@@ -1,4 +1,7 @@
 /* === RESET E BASE === */
+header.header-wrapper {
+  height: 104px;
+} 
 .unipol-header-no-fetch {
   position: relative;
   width: 100%;
